src/TESTING/Errors/Error9.ksa
//ERROR de parametre ja existeix
proc procError(int a, int a){
    print("Soc al procediment");
}
main(){
//ERROR de a ja existeix
    bool a;
    bool a <- true;
}